syntax = "proto3";

option csharp_namespace = "SecureChat.Server.Protos";

package auth;

// Сервис для аутентификации
service AuthService {
  rpc Register (RegisterRequest) returns (RegisterResponse);
  rpc Login (LoginRequest) returns (LoginResponse);
}

// Запрос на регистрацию
message RegisterRequest {
  string username = 1;
  string password = 2;
}

// Ответ на регистрацию
message RegisterResponse {
  bool success = 1;
  string message = 2;
}

// Запрос на вход
message LoginRequest {
  string username = 1;
  string password = 2;
}

// Ответ на вход
message LoginResponse {
  bool success = 1;
  string message = 2;
  int32 user_id = 3;
  string username = 4;
}